--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,8 +1,29 @@
-FROM node:alpine
+# Stage 1
+FROM node:16-alpine as development
 
-WORKDIR /app
-COPY package.json .
+WORKDIR /usr/src/app
+
+COPY package*.json ./
+
 RUN npm install
+
 COPY . .
 
-CMD ["npm", "start"]
+RUN npm run build
+
+# Stage 2
+FROM node:16-alpine as production
+
+ARG NODE_ENV=production
+ENV NODE_ENV=${NODE_ENV}
+
+WORKDIR /usr/src/app
+
+COPY package*.json ./
+
+run npm install --only-production
+
+COPY --from=development /usr/src/app/dist ./dist
+
+CMD ["node", "dist/index.js"]
+
