--- a/auth/package.json
+++ b/auth/package.json
@@ -6,7 +6,15 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "npm run build && node dist/index.js"
+    "start": "npm run build && node dist/index.js",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -23,9 +31,15 @@
   "devDependencies": {
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.1",
+    "mongodb-memory-server": "^8.6.0",
     "rimraf": "^3.0.2",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
   }
