--- a/auth/package.json
+++ b/auth/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
